Fix small spacing issue on account page

--- a/client/src/pages/AccountPage/AccountPage.scss
+++ b/client/src/pages/AccountPage/AccountPage.scss
@@ -7,7 +7,7 @@
 
     fieldset {
         border-radius: 0.5rem;
-        padding: 1rem;
+        padding: 1rem 1rem 2rem 1rem;
         display: flex;
         gap: 1rem;
         // justify-content: center;
